--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "vue": "^2.7.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
